--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Firestore 신호등</title>
+  <title>매점 혼잡도 신호등</title>
   <style>
     /* 전체 페이지 스타일 */
     body {
